<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/img_pregnancy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/trans_white_rectangle"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_sign_up_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_full_name"
            android:hint="@string/input_full_name"
            android:singleLine="true"
            android:textSize="@dimen/normal_text" />


        <EditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/input_email_register"
            android:singleLine="true"
            android:textSize="@dimen/normal_text" />


        <EditText

            android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/padding_content"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/normal_text" />

        <EditText
            android:id="@+id/et_sign_up_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:drawableLeft="@drawable/ic_conceived_date"
            android:hint="@string/input_date"
            android:singleLine="true"
            android:textSize="@dimen/normal_text" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/register_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Register"
            android:textColor="@color/white"
            android:textStyle="normal" />


    </LinearLayout>


</LinearLayout>
